// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Counter.vue snapshot test (en) renders correctly 1`] = `
<div
  class="column"
>
  <div
    class="card"
  >
    <header
      class="card-header"
    >
      <p
        class="card-header-title has-text-grey"
      >
        
        Store Sample
      
      </p>
    </header>
     
    <div
      class="card-content"
    >
      <div
        class="content has-text-centered"
      >
        <span
          class="icon is-large has-text-primary"
        >
          <i
            class="mdi mdi-counter mdi-48px"
          />
        </span>
      </div>
    </div>
     
    <footer
      class="card-footer"
    >
      <div
        class="card-footer-item"
      >
        <span>
          <button
            class="plus button"
            type="button"
          >
            <span
              class="button-wrapper"
            >
              <span
                class="icon"
              >
                <i
                  class="mdi mdi-plus mdi-24px"
                />
              </span>
              <!---->
              <!---->
            </span>
          </button>
           
          <span
            class="subtitle"
          >
            0
          </span>
           
          <button
            class="minus button"
            type="button"
          >
            <span
              class="button-wrapper"
            >
              <span
                class="icon"
              >
                <i
                  class="mdi mdi-minus mdi-24px"
                />
              </span>
              <!---->
              <!---->
            </span>
          </button>
        </span>
      </div>
    </footer>
  </div>
</div>
`;

exports[`components/Counter.vue snapshot test (ja) renders correctly 1`] = `
<div
  class="column"
>
  <div
    class="card"
  >
    <header
      class="card-header"
    >
      <p
        class="card-header-title has-text-grey"
      >
        
        Store サンプル
      
      </p>
    </header>
     
    <div
      class="card-content"
    >
      <div
        class="content has-text-centered"
      >
        <span
          class="icon is-large has-text-primary"
        >
          <i
            class="mdi mdi-counter mdi-48px"
          />
        </span>
      </div>
    </div>
     
    <footer
      class="card-footer"
    >
      <div
        class="card-footer-item"
      >
        <span>
          <button
            class="plus button"
            type="button"
          >
            <span
              class="button-wrapper"
            >
              <span
                class="icon"
              >
                <i
                  class="mdi mdi-plus mdi-24px"
                />
              </span>
              <!---->
              <!---->
            </span>
          </button>
           
          <span
            class="subtitle"
          >
            0
          </span>
           
          <button
            class="minus button"
            type="button"
          >
            <span
              class="button-wrapper"
            >
              <span
                class="icon"
              >
                <i
                  class="mdi mdi-minus mdi-24px"
                />
              </span>
              <!---->
              <!---->
            </span>
          </button>
        </span>
      </div>
    </footer>
  </div>
</div>
`;
